# profilab-extron-matrix

./: .clang-format  CMakeLists.txt  LICENSE  ReadMe.md  appveyor.yml
docs/: Documentation.md
res/: Extron-Matrix.rc  resource.h
src/: configuration.cpp  configuration.h  configurationdialog.cpp  configurationdialog.h  device.cpp  device.h  dll.cpp  dll.def  listserialports.cpp  listserialports.h  simulation.cpp  simulation.h
tests/: .clang-format  CMakeLists.txt
tests/dll/: CMakeLists.txt  dll_test.cpp
tests/mocks/: ReadMe.md  configuration_mock.cpp  configuration_mock.h  configurationdialog_mock.cpp  configurationdialog_mock.h  device_mock.cpp  device_mock.h
tests/unittests/: CMakeLists.txt  configuration_test.cpp  listserialports_test.cpp
